syntax = "proto3";

option go_package = "calculator/calculatorpb";

package calc;

message Request {
    float n1 = 1;
    float n2 = 2;
}

message AddResponse {
    float n1 = 1;
}

message SubstractResponse{
    float n1 = 1;
}

message MultiplyResponse {
    float n1 = 1;
}

message DivideResponse {
    float n1 = 1;
}

service Calculator {
    rpc Add(Request) returns (AddResponse) {}
    rpc Subtract(Request) returns (SubstractResponse) {}
    rpc Multiply(Request) returns (MultiplyResponse) {}
    rpc Divide(Request) returns (DivideResponse) {}
}
